-Add Mesosphere dcos-history-service plugin

--- a/etc/newrelic/newrelic-plugin-agent.cfg
+++ b/etc/newrelic/newrelic-plugin-agent.cfg
@@ -151,6 +151,12 @@ Application:
   #  port: 1717
   #  path: /path/to/unix/socket
 
+  #dcos_history:
+  #  name: dcos_info
+  #  host: dcos_host
+  #  port: dcos_port
+  #  path: /dcos-history-service/history/last 
+
 Daemon:
   user: newrelic
   pidfile: /var/run/newrelic/newrelic-plugin-agent.pid
